<resources>
    <!-- General and Login -->
    <string name="app_name">Runnest</string>
    <string name="who_runs_faster">Who runs faster?</string>
    <string name="sign_in">Sign in</string>
    <string name="runnest_ihl">Runnest IHL</string>
    <string name="client_id">577629382915-kiv730drkucl6c7ivmklabfmv7bairsl.apps.googleusercontent.com</string>

    <!-- Sidebar Appearance and Navigation -->
    <string name="example_email">email@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="uploading_user_data">Uploading user data …</string>
    <string name="downloading_user_data">Downloading user data …</string>
    <string name="DBDownload_error_toast">"Failed to retrieve user data, restart app: "</string>
    <string name="search_title">search_title</string>
    <string name="profile_tab">Profile</string>
    <string name="run_tab">Run</string>
    <string name="run_history">Run History</string>
    <string name="challenge">Challenge</string>
    <string name="new_challenge">New challenge</string>
    <string name="messages">Messages</string>
    <string name="challenges">Challenges</string>
    <string name="log_out">Logout</string>

    <!-- Run and Challenges -->
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="ready">Ready</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="waiting_opponent">Waiting for your opponent…</string>
    <string name="user_ready">YOU ARE READY!</string>
    <string name="opponent_ready">Your opponent is READY!</string>
    <string name="chronometer_before_start">Warm up!</string>
    <string name="opponent_in_room">Your opponent is warming up…</string>
    <string name="warning_missing_updates">Last update: 30 or more seconds ago!</string>
    <string name="abort">abort</string>
    <string name="opponent_finished">Opponent has finished!</string>
    <string name="final_distance">"Final distance: "</string>
    <string name="opponent_completed">"Opponent completed "</string>
    <string name="user_finished">You have Finished!</string>
    <string name="user_completed">"You completed "</string>
    <string name="first_value_intent_extra">firstValue</string>
    <string name="second_value_intent_extra">secondValue</string>
    <string name="chronometer_time_left">"Time left: "</string>
    <string name="chronometer_time_is_up">Time\'s up!</string>
    <string name="you_vs">"You vs. "</string>
    <string name="wait">Wait</string>
    <string name="keep_running">Keep Running</string>
    <string name="quit_challenge_dialog_title">Quit Challenge</string>
    <string name="quit_challenge_dialog_question">Are you sure you want to quit your current Challenge?</string>
    <string name="stop_waiting_dialog_title">Stop Waiting</string>
    <string name="stop_waiting_dialog_question">Are you sure you want to stop waiting and go back?</string>
    <string name="second_position">2°</string>
    <string name="first_position">1°</string>
    <string name="toast_start_challenge">Now you can start the challenge.</string>
    <string name="toast_start_challenge_denied">Permission Denied, you cannot start the challenge.</string>
    <string name="google_api_client_connection_failed">Check your connection or you will be unable to properly continue the challenge</string>

    <!-- Profile -->
    <string name="desc">Default Description</string>
    <string name="schedule">Schedule</string>
    <string name="_0_challenges">0 challenges</string>
    <string name="runs">runs</string>
    <string name="challenges_lowercase">challenges</string>
    <string name="won">won</string>
    <string name="lost">lost</string>

    <!-- Histories -->
    <string name="history">History</string>
    <string name="delete">Delete</string>

    <!-- Recaps -->
    <string name="lost_caps">LOST</string>
    <string name="won_caps">WON</string>
    <string name="left_caps">LEFT</string>
    <string name="average_pace">Average pace:</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="min_over_km">min/km</string>

    <!-- Dialogs -->
    <string name="on_date">on Date</string>
    <string name="opponent_wants_to_schedule_a_run_based_on">Opponent wants to schedule a run based on:</string>
    <string name="schedule_request">Schedule Request</string>
    <string name="schedule_the_challenge">Schedule</string>
    <string name="choose_the_challenge_type">Choose the challenge type</string>
    <string name="distance_challenge">Distance Challenge:</string>
    <string name="time_challenge">Time Challenge:</string>
    <string name="time">Time</string>
    <string name="choose_the_date">Choose the date</string>
    <string name="choose_the_time">Choose the time</string>
    <string name="wants_to_schedule_a_run_based_on">" wants to schedule a run based on"</string>
    <string name="you_and">"you and "</string>
    <string name="scheduled_a_run_based_on">" scheduled a run based on"</string>
    <string name="set_the">Set the …</string>
    <string name="pre_goal">The first one to reach</string>
    <string name="type">Type</string>
    <string name="competition_based_on">Competition based on</string>
    <string name="opponent_challenged_you_on_a_run_based_on">Opponent challenged you on a run based on:</string>
    <string name="challenge_request">Challenge Request</string>
    <string name="prepare_your_challenge">Prepare your challenge</string>
    <string name="challenge_scheduled">Challenge scheduled!</string>
    <string name="challenge_not_null">The goal of the challenge cannot be 0!</string>
    <string name="wins_the_first_one_to_reach">"Wins the first one to reach "</string>
    <string name="wins_the_one_who_runs_the_most_distance_in">"Wins the one who runs more in "</string>
    <string name="set_the_time">Set the time</string>
    <string name="set_the_distance">Set the distance</string>
    <string name="set_the_challenge">Set the challenge</string>
    <string name="distance_type">Distance</string>
    <string name="memo">Memo</string>
    <string name="memo_txt">Remember that you have a challenge based on:</string>
    <string name="Time">Time</string>

    <!-- Icons and Buttons-->
    <string name="login_app_image">login app image</string>
    <string name="running_man">Running Man</string>
    <string name="lock_idle_alarm">Lock Idle Alarm</string>
    <string name="newbie">Newbie</string>
    <string name="quit">Quit</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>

    <!-- Miscellaneous -->
    <string name="colon">:</string>
    <string name="colon_with_space">" : "</string>
    <string name="meters">" m"</string>
    <string name="white_space">" "</string>
    <string name="in">"in "</string>
    <string name="at">At</string>
    <string name="dash">-</string>
    <string name="min">min</string>
    <string name="_0">0</string>
    <string name="_0_runs">0 runs</string>
    <string name="time_zero">00:00</string>
    <string name="h">h</string>
    <string name="zero_distance">0.00 km</string>
    <string name="x_km">X km</string>
    <string name="m">m</string>
    <string name="km">"km"</string>
    <string name="spaced_h">"h "</string>
    <string name="date_example">14–12–2016</string>
    <string name="time_example">12:40</string>
    <string name="opponent_intent_extra">opponent</string>
    <string name="owner_intent_extra">owner</string>
    <string name="type_intent_extra">type</string>
    <string name="msg_id_intent_extra">msgId</string>
</resources>
